--- a/Camera_App/pocs/canvas.html
+++ b/Camera_App/pocs/canvas.html
@@ -33,6 +33,12 @@
         .blue{
             background-color: lightblue;
         }
+
+        .download{
+            border:3px solid;
+            padding-top: 1rem;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -41,6 +47,7 @@
         <div class="color red"></div>
         <div class="color green"></div>
         <div class="color blue"></div>
+        <div class="download">Download</div>
     </div>
     <canvas class="board"></canvas>
     <script>
@@ -90,7 +97,7 @@
             for(let i= 0; i < colors.length ;i++){
                 colors[i].addEventListener("click" , function(){
                     let newcolor =colors[i].classList[1];
-                    tool.strokeStyle ="light"+newcolor;
+                    tool.strokeStyle =newcolor;
                 })
                 
 
@@ -128,5 +135,27 @@
    
    </script>
 
+   <!-- download -->
+   <script>
+       let download = document.querySelector(".download");
+       download.addEventListener("click", function(){
+           let url = board.toDataURL();
+           let a = document.createElement("a");
+           a.download = "file.png";
+           a.href = url;
+           a.click();
+           a.remove();
+       })
+   </script>
+   <!-- image -->
+   <script>
+       let myImage = document.querySelector("img");
+       myImage.addEventListener("load" , function(){
+           // img , srcImg -> sX,srcY,s.width,s.height, canvas.x,canvas.y, 
+            // actual height ,actual with of the rendered image
+           tool.drawImage(myImage ,0 ,0);
+       })
+   </script>
+    </body>
 </body>
 </html>
