--- a/Camera_App/pocs/canvas.html
+++ b/Camera_App/pocs/canvas.html
@@ -19,10 +19,10 @@
             align-items: center;
         }
 
-        .color{
+        .color,.download{
             height:70%;
             width:20%;
-            border:2px solid grey;
+            /* border:2px solid grey; */
         }
 
         .red{
@@ -50,6 +50,7 @@
         <div class="color blue"></div>
         <div class="download">Download</div>
     </div>
+    <img src="https://picsum.photos/200" style="display: none;" alt="" crossorigin="anonymous">
     <canvas class="board"></canvas>
     <script>
             let board = document.querySelector(".board");
